--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Raven Joshua</h1>
+						<p>Developer &nbsp;&bull;&nbsp; Gamer💚. &nbsp;&bull;&nbsp;</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="facebook.com/raven.joshua" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://facebook.com/raven.joshua" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								
 								<li><a href="https://github.com/arjeey" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="arjeyrepato04@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
