--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Raven@ <a href="http://html5up.net">2020</a>.</span>
+						<span class="copyright">&copy; Raven: <a href="http://html5up.net">2020</a>.</span>
 					</footer>
 
 			</div>
