--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 								<li><a href="https://facebook.com/raven.joshua" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								
 								<li><a href="https://github.com/arjeey" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="arjeyrepato04@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="arjeyrepato04@gmail.com" class="icon solid fa-instagram"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Raven: <a href="http://html5up.net">2020</a>.</span>
+						<span class="copyright">&copy; Raven:2020.</span>
 					</footer>
 
 			</div>
