--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 						<p>Developer &nbsp;&bull;&nbsp; Gamer💚</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/aarjeeyy" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://facebook.com/raven.joshua" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								
 								<li><a href="https://github.com/arjeey" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="arjeyrepato04@gmail.com" class="icon brands fa-instagram"><span class="label">Email</span></a></li>
+								<li><a href="https://www.instagram.com/ar.jey" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Raven:2020.</span>
+						<span class="copyright">&copy; Raven:2020</span>
 					</footer>
 
 			</div>
