--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>🇸🇶🇺🇦🇸🇭🇾</h1>
+						<h1>ѕqυαѕнy</h1>
 						<p>Developer &nbsp;&bull;&nbsp; Gamer💚</p>
 						<nav>
 							<ul>
